# omni_ros

./: CMakeLists.txt  README.md  frames.gv  package.xml
omni_bringup/: CMakeLists.txt  package.xml
omni_bringup/config/: omni_mocap.yaml  omnigrasper.yaml  omnigrasper_common.yaml  omnigrasper_mpc_episodic.yaml  omnigrasper_mpc_episodic_inSitu.yaml  omnigrasper_policy.yaml  omnigrasper_pos.yaml  omnigrasper_safevel.yaml  omnigrasper_test_limits.yaml  omnigrasper_vel.yaml  omnipointer.yaml  velocity_teleop.yaml
omni_bringup/launch/: omni_mocap.launch  omnigrasper.launch  omnipointer.launch  omnipolicy.launch  velocity_teleop.launch
omni_controllers/: CMakeLists.txt  omni_controllers_plugins.xml  package.xml
omni_controllers/include/omni_controllers/: arm_speed_safe_controller.hpp  cartesian_constraint.hpp  lazy_controller.hpp  mpc_controller.hpp  mpc_insitu_ctrl.hpp  policy_controller.hpp  policy_controller_with_reset.hpp
omni_controllers/include/omni_controllers/policies/: NNpolicy.hpp  af.hpp  connection.hpp  mlp.hpp  neuron.hpp  nn.hpp  pf.hpp  trait.hpp
omni_controllers/msg/: PolicyInit.msg  PolicyParams.msg  PubMsg.msg  PublishMatrix.msg
omni_controllers/src/: TestTopic.cpp  arm_speed_safe_controller.cpp
omni_description/: README.md  package.xml
omni_description/config/: omni_description.rviz  omnigrasper_description.rviz
omni_description/launch/: display_omnigrasper.launch  display_omnipointer.launch  omnigrasper.launch  omnipointer.launch  partial_omnigrasper.launch
omni_description/robots/: omnigrasper.urdf  omnigrasper.urdf.xacro  omnigrasper_arm_only.urdf  omnigrasper_arm_only.urdf.xacro  omnipointer.urdf  omnipointer.urdf.xacro  omnipointer_arm_only.urdf
omni_description/stl/: FRP42-A110.STL  FRP42-H120.STL  FRP54-A110.STL  FRP54-H120.STL  FRP54-H220.STL  H54-200-S500-R.STL  L42-10-S300-R.STL  L54-30-S500-R.STL  L54-50-S500-R.STL
omni_description/urdf/: common.xacro  materials.urdf.xacro
omni_description/urdf/omnigrasper_arm/: arm.urdf.xacro  arm.xacro  partial_arm.urdf  partial_arm.xacro
omni_description/urdf/omnipointer_arm/: properties.urdf.xacro
omni_driver/: CMakeLists.txt  package.xml
omni_driver/include/omni_driver/: omni.hpp
omni_driver/src/: omni.cpp  omni_driver.cpp
omni_ros/: CMakeLists.txt  package.xml
robots/: omnipointer.urdf.xacro  omnipointer_arm_only.urdf.xacro
urdf/: common.xacro
urdf/omni_plate/: plate.urdf.xacro
urdf/omnipointer_arm/: arm.urdf.xacro
