<?xml version="1.0"?>
<package>
  <name>omni_description</name>
  <version>0.1.0</version>
  <description>Omnidirectional robots descriptions in form of URDF files</description>

  <maintainer email="fede.allocati@gmail.com">Federico Allocati</maintainer>

  <license>CeCILL</license>

  <url type="repository">https://github.com/resibots/omni_description</url>
  <url type="bugtracker">https://github.com/resibots/omni_description/issues</url>

  <author email="fede.allocati@gmail.com">Federico Allocati</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>youbot_description</build_depend>

  <run_depend>xacro</run_depend>
</package>
