<?xml version="1.0"?>
<package format="2">
  <name>omni_controllers</name>
  <version>0.1.0</version>
  <description>Controllers for our Omnigrasper's arm</description>

  <maintainer email="dorian.goepp@inria.fr">Dorian Goepp</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/resiblts/omni_ros/omni_controllers</url>
  <url type="bugtracker">https://github.com/resiblts/omni_ros/omni_controllers/issues</url>

  <author>Vijay Pradeep</author>
  <author>Adolfo Rodriguez Tsouroukdissian</author>
  <author>Dorian Goepp</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>message_runtime</depend>
  <depend>control_msgs</depend>
  <depend>control_toolbox</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>realtime_tools</depend>
  <depend>velocity_controllers</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>

  <export>
    <cpp cflags="-I${prefix}/include"/>
    <controller_interface plugin="${prefix}/omni_controllers_plugins.xml"/>
  </export>
</package>
